tests/ui/type-alias-impl-trait/reveal_local.stderr
error[E0391]: cycle detected when computing type of opaque `Foo::{opaque#0}`
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   |
note: ...which requires type-checking `not_good`...
  --> $DIR/reveal_local.rs:15:5
   |
LL |     is_send::<Foo>();
   |     ^^^^^^^^^^^^^^
   = note: ...which requires evaluating trait selection obligation `Foo: core::marker::Send`...
   = note: ...which again requires computing type of opaque `Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `Foo::{opaque#0}`
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of opaque `Foo::{opaque#0}`
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   |
note: ...which requires type-checking `not_good`...
  --> $DIR/reveal_local.rs:12:1
   |
LL | fn not_good() {
   | ^^^^^^^^^^^^^
   = note: ...which again requires computing type of opaque `Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `Foo::{opaque#0}`
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of opaque `Foo::{opaque#0}`
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   |
note: ...which requires type-checking `not_gooder`...
  --> $DIR/reveal_local.rs:18:1
   |
LL | fn not_gooder() -> Foo {
   | ^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing type of opaque `Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `Foo::{opaque#0}`
  --> $DIR/reveal_local.rs:5:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0391`.
